[package]
name = "oxidized-fuse"
version = "0.1.0"
description = "FUSE filesystem for Cryptomator vaults using oxidized-cryptolib"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cryptomator", "fuse", "encryption", "filesystem"]
categories = ["filesystem", "cryptography"]

[[bin]]
name = "oxmount"
path = "src/main.rs"

[dependencies]
oxidized-cryptolib = { workspace = true, features = ["async"] }
clap = { workspace = true }
rpassword = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"

# FUSE
fuser = "0.16"
async-trait = "0.1"
libc = "0.2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "macros"] }

# Concurrent data structures
dashmap = "6"

# Security
zeroize = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "fs"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "fuse_operations"
harness = false
