[package]
name = "oxidized-fuse"
version = "0.1.0"
description = "FUSE filesystem for Cryptomator vaults using oxidized-cryptolib"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cryptomator", "fuse", "encryption", "filesystem"]
categories = ["filesystem", "cryptography"]

[[bin]]
name = "oxmount"
path = "src/main.rs"

[dependencies]
oxidized-cryptolib = { workspace = true, features = ["async"] }
clap = { workspace = true }
rpassword = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# FUSE
libc = "0.2"

# fuser: pure-rust on Linux, libfuse on macOS
[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.16", features = ["libfuse"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "macros"] }

# Concurrent data structures
dashmap = "6"

# Security
zeroize = "1"

# Signal handling (termination feature enables SIGTERM/SIGHUP handling)
ctrlc = { version = "3", features = ["termination"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "fs"] }

# Optional: tokio-console for async debugging
console-subscriber = { workspace = true, optional = true }

[features]
# Enable FUSE integration tests (requires FUSE installed + external test tools)
fuse-tests = []
# Enable tokio-console for async debugging (run `tokio-console` in another terminal)
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "fuse_operations"
harness = false
