[package]
name = "oxidized-gui"
version = "0.1.0"
description = "Desktop GUI for Cryptomator vault management"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oxvault"
path = "src/main.rs"

[dependencies]
# GUI framework
dioxus = { version = "0.6", features = ["desktop"] }

# Backend integration
oxidized-cryptolib = { path = "../oxidized-cryptolib" }
oxidized-fuse = { path = "../oxidized-fuse" }
oxidized-fskit = { path = "../oxidized-fskit", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System integration
directories = "5"        # XDG config paths
open = "5"               # Open file manager
rfd = "0.15"             # Native file dialogs

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true

[features]
# Enable FSKit backend (macOS 15.4+ only, requires protoc at build time)
fskit = ["dep:oxidized-fskit"]

[dev-dependencies]
tempfile = "3"
