[package]
name = "oxidized-gui"
version = "0.1.0"
description = "Desktop GUI for Cryptomator vault management"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oxvault"
path = "src/main.rs"

[dependencies]
# GUI framework
dioxus = { version = "0.7", features = ["desktop"] }

# Backend integration
oxidized-cryptolib = { path = "../oxidized-cryptolib" }
oxidized-mount-common = { path = "../oxidized-mount-common" }

# Mount backends (all optional for cross-platform support)
oxidized-fuse = { path = "../oxidized-fuse", optional = true }
oxidized-fskit = { path = "../oxidized-fskit", optional = true }
oxidized-nfs = { path = "../oxidized-nfs", optional = true }
oxidized-webdav = { path = "../oxidized-webdav", optional = true }

# Optional: tokio-console for async debugging
console-subscriber = { workspace = true, optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System integration
directories = "6"        # XDG config paths
dirs = "6"               # Home directory detection
open = "5"               # Open file manager
rfd = "0.15"             # Native file dialogs
tray-icon = "0.21"       # System tray support (match dioxus-desktop)
muda = "0.17"            # Menu library (match dioxus-desktop)
crossbeam-channel = "0.5" # Thread-safe channels for tray events

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
ctrlc = "3.5.1"
image = { version = "0.25.9", features = ["png", "tiff"] }
plotters = { version = "0.3.7", features = ["svg_backend"] }

[features]
# No default backend - platform-specific features should be enabled at build time
# Linux/macOS: --features fuse (or fskit on macOS 15.4+)
# Windows: --features webdav
default = []

# FUSE backend (macOS with macFUSE, Linux with libfuse)
# Not available on Windows
fuse = ["dep:oxidized-fuse"]

# FSKit backend (macOS 15.4+ only, requires protoc at build time)
# Also enables the setup feature for download/install wizard
fskit = ["dep:oxidized-fskit", "oxidized-fskit/setup"]

# WebDAV backend (cross-platform, no kernel extensions required)
webdav = ["dep:oxidized-webdav"]

# NFS backend (Unix only, no kernel extensions required)
nfs = ["dep:oxidized-nfs"]

# All Unix backends
unix-backends = ["fuse", "fskit", "nfs", "webdav"]

# Enable tokio-console for async debugging (forwards to all backends)
tokio-console = [
    "dep:console-subscriber",
    "tokio/tracing",
    "oxidized-fuse?/tokio-console",
    "oxidized-fskit?/tokio-console",
    "oxidized-nfs?/tokio-console",
    "oxidized-webdav?/tokio-console",
]

# macOS-only: SF Symbols support via AppKit
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString"] }
objc2-app-kit = { version = "0.3", features = [
    "NSImage",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSImageRep",
] }

[dev-dependencies]
tempfile = "3"
