[package]
name = "oxidized-webdav"
version = "0.1.0"
description = "WebDAV server backend for Cryptomator vaults using oxidized-cryptolib"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cryptomator", "webdav", "encryption", "filesystem"]
categories = ["filesystem", "cryptography", "web-programming"]

[dependencies]
oxidized-cryptolib = { workspace = true, features = ["async"] }
thiserror = { workspace = true }
tracing = { workspace = true }

# WebDAV server
dav-server = "0.8"

# HTTP server
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "signal", "macros", "process"] }

# Utilities
bytes = "1"
futures = "0.3"
oxidized-mount-common = { version = "0.1.0", path = "../oxidized-mount-common" }

# Optional: tokio-console for async debugging
console-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
rand = "0.9"
tokio-test = "0.4"

[features]
default = []
# Enable tokio-console for async debugging (run `tokio-console` in another terminal)
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
